# Chatbot

./: .gitignore  README.md  casos_de_uso.docx  config.yml  credentials.yml  domain.yml  index.html  pyproject.toml
.rasa/cache/: cache.db
.rasa/cache/tmp0hmqoxvq/: DIETClassifier.data_example.pkl  DIETClassifier.sparse_feature_sizes.pkl  DIETClassifier.tf_model.index
.rasa/cache/tmp0ihi6lxo/: unexpected_intent_policy.data_example.pkl  unexpected_intent_policy.fake_features.pkl  unexpected_intent_policy.label_quantiles.pkl  unexpected_intent_policy.tf_model.data-00000-of-00001  unexpected_intent_policy.tf_model.index
.rasa/cache/tmp0ssf4cv7/: featurizer.json  ted_policy.data_example.pkl  ted_policy.fake_features.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp0tj4uymw/: synonyms.json
.rasa/cache/tmp14cja3da/: vocabularies.pkl
.rasa/cache/tmp16sqp97j/: vocabularies.pkl
.rasa/cache/tmp1_9g_wh1/: vocabularies.pkl
.rasa/cache/tmp1icpmni6/: DIETClassifier.data_example.pkl  DIETClassifier.sparse_feature_sizes.pkl  DIETClassifier.tf_model.index
actions/: actions.py  functions.py  productos.json  servicios.json  subproductos.json
data/: nlu.yml  rules.yml  stories.yml
resultados_incrustaciones_preentrenadas/: DIETClassifier_errors.json  DIETClassifier_report.json  failed_test_stories.yml  intent_report.json  story_report.json
resultados_incrustaciones_supervisadas/: DIETClassifier_report.json  failed_test_stories.yml  intent_report.json  story_report.json
static/css/: style.css
tests/: test_stories.yml
(+416 files in other folders)
